properties file impl

--- a/files/config.properties
+++ b/files/config.properties
@@ -1,7 +1,7 @@
-#Wed Dec 21 22:02:18 CET 2016
+#Thu Dec 22 00:44:45 CET 2016
 height=30
-attackStrategy=Simple
-placeStrategy=Simple
+attackStrategy=Advanced
+placeStrategy=Advanced
 namePlayer2=Computer
-namePlayer1=player 1
+namePlayer1=player
 length=10
