mouseclick into functions

--- a/files/config.properties
+++ b/files/config.properties
@@ -1,7 +1,7 @@
-#Thu Dec 22 08:56:13 CET 2016
+#Thu Dec 22 09:47:34 CET 2016
 height=30
 attackStrategy=Advanced
 placeStrategy=Advanced
 namePlayer2=Computer
-namePlayer1=player
+namePlayer1=Yanice
 length=10
