--- a/files/config.properties
+++ b/files/config.properties
@@ -1,7 +1,7 @@
-#Thu Dec 22 09:47:34 CET 2016
+#Sun Dec 25 00:53:48 CET 2016
 height=30
-attackStrategy=Advanced
-placeStrategy=Advanced
+attackStrategy=Simple
+placeStrategy=Simple
 namePlayer2=Computer
 namePlayer1=Yanice
 length=10
